--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: #c7c9c8;
+            background: #a6cee3;
             font-family: 'Lato', sans-serif;
             font-weight: 300;
             color: #3d3d3d;
@@ -144,8 +144,10 @@
         <h1>Visit Singapore</h1>
         <div class="row">
             <div class="first-column">
-                <p>As I am from Singapore, I thought Singapore map is a great way to show the point of interests, train station with rail lines and rivers. Overlap colors with opacity on map to show grass, scrub and wood although it is not very obvious as well as rivers, stream and sea. 
-                
+                <p>I think that Singapore map is a great way to show the point of interests, train station with rail lines and rivers. Overlap colors with opacity on map to show grass, scrub and wood although it is not very obvious as well as rivers, stream and sea. 
+                </p>
+                <p>
+                    Note: There are camera icons to click and see images of the places of interests. 
                 </p>
                 <hr>
                 <p>
